upload attatchemts file

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-NEXT_PUBLIC_BACKEND_API=https://5fa5-178-20-188-157.ngrok-free.app
+NEXT_PUBLIC_BACKEND_API=https://521f-178-20-188-157.ngrok-free.app
 NEXT_PUBLIC_INTEGRATION_ID=90391ca9-6691-4c8d-91f8-a0d92145e99f
 NEXT_PUBLIC_REGION=us-south
 NEXT_PUBLIC_SERVICE_INSTANCE_ID=e64a729e-7762-415d-8ef7-d589bd53353e
+
